--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
 			<div>
 				<p class="style1"> (Join Here) </p>
 				<div class="checkbox_wrap">
-					<div class="option photo_option tr-option"><img src="images/body1_o.jpg" alt="https://4.fo/DR_slebew">
+					<div class="option photo_option tr-option"><img src="images/body1_o.jpg" alt="https://4.fo/Tora-x">
 						<div class="option-title clearfix"> Skinny </div>
 					</div>
-					<div class="option photo_option tr-option"><img src="images/body2_o.jpg" alt="https://4.fo/DR_slebew">
+					<div class="option photo_option tr-option"><img src="images/body2_o.jpg" alt="https://4.fo/Tora-x">
 						<div class="option-title clearfix"> Regular </div>
 					</div>
-					<div class="option photo_option tr-option"><img src="images/body3_o.jpg" alt="https://4.fo/DR_slebew">
+					<div class="option photo_option tr-option"><img src="images/body3_o.jpg" alt="https://4.fo/Tora-x">
 						<div class="option-title clearfix"> B.B.W. </div>
 					</div>
-					<div class="option photo_option tr-option"><img src="images/body4_o.jpg" alt="https://4.fo/DR_slebew">
+					<div class="option photo_option tr-option"><img src="images/body4_o.jpg" alt="https://4.fo/Tora-x">
 						<div class="option-title clearfix"> Big tits </div>
 					</div>
-					<div class="option photo_option tr-option"><img src="images/body5_o.jpg" alt="https://4.fo/DR_slebew">
+					<div class="option photo_option tr-option"><img src="images/body5_o.jpg" alt="https://4.fo/Tora-x">
 						<div class="option-title clearfix"> Sexy ass </div>
 					</div>
 				</div>
 			</div>
 			<div align="center" id="press11">
-					<a id="q5s" class="btnyes" href="https://4.fo/DR_slebew">          Continue                                                        </a>
+					<a id="q5s" class="btnyes" href="https://4.fo/Tora-x">          Continue                                                        </a>
 				</div>
 			</div>
 		</div>
